syntax = "proto3";
package openim.event;

import "common.proto";
import "shared.proto";

option csharp_namespace = "OpenIM.Proto";
option go_package = "github.com/openimsdk/openim-sdk-core/v3/proto/go/event";
option swift_prefix = "";

enum FuncRequestEventName {
  None = 0;

  InitSDK = 1;
  Login = 2;
  Logout = 3;
  SetAppBackgroundStatus = 107;
  NetworkStatusChanged = 108;
  GetLoginStatus = 109;
  Version = 110;

  SendMessage = 4;
  UploadLogs = 5;
  UploadFile = 6;
  Log = 7;
  UpdateFcmToken = 10;
  SetAppBadge = 11;
  EventOnSendMsgProgress = 12;
  EventOnUploadFileProgress = 13;
  EventOnUploadLogsProgress = 14;
  EventOnConnecting = 15;
  EventOnConnectSuccess = 16;
  EventOnConnectFailed = 17;
  EventOnKickedOffline = 18;
  EventOnUserTokenExpired = 19;
  EventOnUserTokenInvalid = 20;
  EventOnSyncServerStart = 21;
  EventOnSyncServerFinish = 22;
  EventOnSyncServerFailed = 23;
  EventOnSyncServerProgress = 24;
  EventOnNewConversation = 25;
  EventOnConversationChanged = 26;
  EventOnTotalUnreadMessageCountChanged = 27;
  EventOnConversationUserInputStatusChanged = 28;
  EventOnRecvNewMessage = 29;
  EventOnRecvC2CReadReceipt = 30;
  EventOnNewRecvMessageRevoked = 31;
  EventOnRecvOfflineNewMessage = 32;
  EventOnMessageDeleted = 33;
  EventOnRecvOnlineOnlyMessage = 34;
  EventOnMessageEdited = 35;
  // FriendCallback Events
  EventOnFriendApplicationAdded = 36;
  EventOnFriendApplicationDeleted = 37;
  EventOnFriendApplicationAccepted = 38;
  EventOnFriendApplicationRejected = 39;
  EventOnFriendAdded = 40;
  EventOnFriendDeleted = 41;
  EventOnFriendInfoChanged = 42;
  EventOnBlackAdded = 43;
  EventOnBlackDeleted = 44;

  // GroupCallback Events
  EventOnJoinedGroupAdded = 45;
  EventOnJoinedGroupDeleted = 46;
  EventOnGroupMemberAdded = 47;
  EventOnGroupMemberDeleted = 48;
  EventOnGroupApplicationAdded = 49;
  EventOnGroupApplicationDeleted = 50;
  EventOnGroupInfoChanged = 51;
  EventOnGroupDismissed = 52;
  EventOnGroupMemberInfoChanged = 53;
  EventOnGroupApplicationAccepted = 54;
  EventOnGroupApplicationRejected = 55;

  // CustomBusinessCallback Events
  EventOnRecvCustomBusinessMessage = 56;

  // UserCallback Events
  EventOnSelfInfoUpdated = 57;
  EventOnUserOnlineStatusChanged = 58;
  EventOnUserCommandAdd = 59;
  EventOnUserCommandDelete = 60;
  EventOnUserCommandUpdate = 61;

  CreateGroup = 1000;
  JoinGroup = 1001;
  QuitGroup = 1002;
  DismissGroup = 1003;
  ChangeGroupMute = 1004;
  ChangeGroupMemberMute = 1005;
  TransferGroupOwner = 1006;
  KickGroupMember = 1007;
  SetGroupInfo = 1008;
  SetGroupMemberInfo = 1009;
  GetJoinedGroups = 1010;
  GetJoinedGroupsPage = 1011;
  GetSpecifiedGroupsInfo = 1012;
  SearchGroups = 1013;
  GetGroupMemberOwnerAndAdmin = 1014;
  GetGroupMembersByJoinTimeFilter = 1015;
  GetSpecifiedGroupMembersInfo = 1016;
  GetGroupMembers = 1017;
  GetGroupApplication = 1018;
  SearchGroupMembers = 1019;
  IsJoinGroup = 1020;
  GetUsersInGroup = 1021;
  InviteUserToGroup = 1022;
  HandleGroupApplication = 1023;

  GetSpecifiedFriends = 1100;
  AddFriend = 1101;
  GetFriendApplication = 1102;
  HandleFriendApplication = 1103;
  CheckFriend = 1104;
  DeleteFriend = 1105;
  GetFriends = 1106;
  GetFriendsPage = 1107;
  SearchFriends = 1108;
  AddBlack = 1109;
  DeleteBlack = 1110;
  GetBlacks = 1111;
  UpdateFriend = 1112;

  // conversation_msg
  GetAllConversationList = 2000;
  GetConversationListSplit = 2001;
  HideConversation = 2002;
  GetAtAllTag = 2003;
  GetOneConversation = 2004;
  GetMultipleConversation = 2005;
  HideAllConversations = 2006;
  SetConversationDraft = 2007;
  SetConversation = 2008;
  GetTotalUnreadMsgCount = 2009;
  GetConversationIDBySessionType = 2010;
  FindMessageList = 2011;
  GetHistoryMessageList = 2012;
  RevokeMessage = 2014;
  TypingStatusUpdate = 2015;
  MarkConversationMessageAsRead = 2016;
  MarkAllConversationMessageAsRead = 2017;
  DeleteMessageFromLocal = 2018;
  DeleteMessage = 2019;
  DeleteAllMsgFromLocalAndServer = 2020;
  DeleteAllMessageFromLocal = 2021;
  ClearConversationAndDeleteAllMsg = 2022;
  DeleteConversationAndDeleteAllMsg = 2023;
  InsertSingleMessageToLocal = 2024;
  InsertGroupMessageToLocal = 2025;
  SearchLocalMessages = 2026;
  SetMessageLocalEx = 2027;
  SearchConversation = 2028;

  CreateTextMessage = 2029;
  CreateAdvancedTextMessage = 2030;
  CreateTextAtMessage = 2031;
  CreateLocationMessage = 2032;
  CreateCustomMessage = 2033;
  CreateQuoteMessage = 2034;
  CreateAdvancedQuoteMessage = 2035;
  CreateCardMessage = 2036;
  CreateImageMessage = 2037;
  CreateSoundMessage = 2038;
  CreateVideoMessage = 2039;
  CreateFileMessage = 2040;
  CreateMergerMessage = 2041;
  CreateFaceMessage = 2042;
  CreateForwardMessage = 2043;

  ProcessUserCommandGetAll = 2100;
  GetSelfUserInfo = 2101;
  SetSelfInfo = 2102;
  ProcessUserCommandAdd = 2103;
  ProcessUserCommandDelete = 2104;
  ProcessUserCommandUpdate = 2105;
  GetUsersInfo = 2106;

  SubscribeUsersOnlineStatus = 2229;
  UnsubscribeUsersOnlineStatus = 2230;
  ChangeInputStates = 2231;
  GetInputStates = 2232;

  // The following functions are only used for Go and JS interaction and can be ignored by other platforms.
  JsFileOpen = 2110;
  JsFileRead = 2111;
  JsFileClose = 2112;
  JsSqliteOpen = 2113;
  JsSqliteExec = 2114;
  JsSqliteQuery = 2115;
  JsSqliteClose = 2116;
}

message EventOnSendMsgProgressData {
  // @message_client_msg_id
  string clientMsgID = 1;
  // send msg progress
  int32 progress = 2;
}

message EventOnUploadFileProgressData {
  // upload file progress
  int32 progress = 1;
}

message EventOnUploadLogsProgressData {
  // upload logs progress
  int32 progress = 1;
}

message EventOnConnectingData {}
message EventOnConnectSuccessData {}
message EventOnConnectFailedData {
  // error code
  int32 errCode = 1;
  // error message
  string errMsg = 2;
}
message EventOnKickedOfflineData {}
message EventOnUserTokenExpiredData {}
message EventOnUserTokenInvalidData {
  // error message
  string errMsg = 1;
}
message EventOnSyncServerStartData {
  // @event_is_reinstalled
  bool reinstalled = 1;
}
message EventOnSyncServerFinishData {
  // @event_is_reinstalled
  bool reinstalled = 1;
}
message EventOnSyncServerFailedData {
  // @event_is_reinstalled
  bool reinstalled = 1;
}
message EventOnSyncServerProgressData {
  // @event_is_reinstalled
  int32 progress = 1;
}
message EventOnNewConversationData {
  // @shared_imconversations
  repeated openim.sdk.shared.IMConversation conversationList = 1;
}
message EventOnConversationChangedData {
  // @shared_imconversations
  repeated openim.sdk.shared.IMConversation conversationList = 1;
}
message EventOnTotalUnreadMessageCountChangedData {
  // @conversation_total_unread_count
  int32 totalUnreadCount = 1;
}
message EventOnConversationUserInputStatusChangedData {
  // @conversation_id
  string conversationID = 1;
  // @user_id
  string userID = 2;
  // @common_platforms
  repeated openim.sdk.common.Platform platforms = 3;
}
message EventOnRecvNewMessageData {
  // @shared_immessage
  openim.sdk.shared.IMMessage message = 1;
}
message MessageReceipt {
  // @group_id
  string groupID = 1;
  // @user_id
  string userID = 2;
  // message id list
  repeated string msgIDList = 3;
  // read time
  int64 readTime = 4;
  // @message_msg_from
  int32 msgFrom = 5;
  // @common_content_type
  int32 contentType = 6;
  // @message_session_type
  int32 sessionType = 7;
}

message EventOnRecvC2CReadReceiptData {
  // msg receipt list
  repeated MessageReceipt msgReceiptList = 1;
}

message EventOnNewRecvMessageRevokedData {
  // revoked notification
  openim.sdk.shared.RevokedTips revoked = 1;
}
message EventOnRecvOfflineNewMessageData {
  // @shared_immessage
  openim.sdk.shared.IMMessage message = 1;
}
message EventOnMessageDeletedData {
  // @shared_immessage
  openim.sdk.shared.IMMessage message = 1;
}
message EventOnRecvOnlineOnlyMessageData {
  // @shared_immessage
  openim.sdk.shared.IMMessage message = 1;
}
message EventOnMessageEditedData {
  // @shared_immessage
  openim.sdk.shared.IMMessage message = 1;
}

// FriendCallback Data Types
message EventOnFriendApplicationAddedData {
  // @shared_imfriend_application
  openim.sdk.shared.IMFriendApplication application = 1;
}

message EventOnFriendApplicationDeletedData {
  // @shared_imfriend_application
  openim.sdk.shared.IMFriendApplication application = 1;
}

message EventOnFriendApplicationAcceptedData {
  // @shared_imfriend_application
  openim.sdk.shared.IMFriendApplication application = 1;
}

message EventOnFriendApplicationRejectedData {
  // @shared_imfriend_application
  openim.sdk.shared.IMFriendApplication application = 1;
}

message EventOnFriendAddedData {
  // @shared_imfriend
  openim.sdk.shared.IMFriend friend = 1;
}

message EventOnFriendDeletedData {
  // @shared_imfriend
  openim.sdk.shared.IMFriend friend = 1;
}

message EventOnFriendInfoChangedData {
  // @shared_imfriend
  openim.sdk.shared.IMFriend friend = 1;
}

message EventOnBlackAddedData {
  // @shared_imblack
  openim.sdk.shared.IMBlack black = 1;
}

message EventOnBlackDeletedData {
  // @shared_imblack
  openim.sdk.shared.IMBlack black = 1;
}

// GroupCallback Data Types
message EventOnJoinedGroupAddedData {
  // @shared_imgroup
  openim.sdk.shared.IMGroup group = 1;
}

message EventOnJoinedGroupDeletedData {
  // @shared_imgroup
  openim.sdk.shared.IMGroup group = 1;
}

message EventOnGroupMemberAddedData {
  // @shared_imgroup_member
  openim.sdk.shared.IMGroupMember member = 1;
}

message EventOnGroupMemberDeletedData {
  // @shared_imgroup_member
  openim.sdk.shared.IMGroupMember member = 1;
}

message EventOnGroupApplicationAddedData {
  // @shared_imgroup_application
  openim.sdk.shared.IMGroupApplication application = 1;
}

message EventOnGroupApplicationDeletedData {
  // @shared_imgroup_application
  openim.sdk.shared.IMGroupApplication application = 1;
}

message EventOnGroupInfoChangedData {
  // @shared_imgroup
  openim.sdk.shared.IMGroup group = 1;
}

message EventOnGroupDismissedData {
  // @shared_imgroup
  openim.sdk.shared.IMGroup group = 1;
}

message EventOnGroupMemberInfoChangedData {
  // @shared_imgroup_member
  openim.sdk.shared.IMGroupMember member = 1;
}

message EventOnGroupApplicationAcceptedData {
  // @shared_imgroup_application
  openim.sdk.shared.IMGroupApplication application = 1;
}

message EventOnGroupApplicationRejectedData {
  // @shared_imgroup_application
  openim.sdk.shared.IMGroupApplication application = 1;
}

// CustomBusinessCallback Data Type
message EventOnRecvCustomBusinessMessageData {
  // custom message
  string businessMessage = 1;
}

// UserCallback Data Types
message EventOnSelfInfoUpdatedData {
  // self user info
  openim.sdk.shared.IMUser user = 1;
}

message EventOnUserOnlineStatusChangedData {
  // @user_id
  string userID = 1;
  // @common_platforms
  repeated openim.sdk.common.Platform platforms = 2;
}

message EventOnUserCommandAddData {
  // @user_command_info
  openim.sdk.shared.CommandInfo command = 1;
}

message EventOnUserCommandDeleteData {
  // @user_command_info
  openim.sdk.shared.CommandInfo command = 1;
}

message EventOnUserCommandUpdateData {
  // @user_command_info
  openim.sdk.shared.CommandInfo command = 1;
}
